# CyberGPT

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Readme.md  ai_settings.yaml  auto-gpt.json  main.py  mkdocs.yaml  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: documentation.yaml  publish.yaml  test.yaml
cyber/config/: __init__.py  utils.py
cyber/dataset/: CyberDataset.py  RawTokenDataset.py  RawVideoDataset.py  utils.py
cyber/models/perception/: README.md
cyber/models/perception/mapping/topomap/: CMakeLists.txt  README.md  gt_map.py  localization.py  models.py  navigation.py  package.xml  prism_topomap_node.py  topo_graph.py  utils.py
cyber/models/perception/mapping/topomap/config/: habitat_mp3d.yaml  husky_rosbag_realsense_and_zed.yaml  husky_rosbag_two_realsenses.yaml
cyber/models/perception/mapping/topomap/launch/: build_map_by_iou_habitat.launch  build_map_by_iou_husky_rosbag.launch  navigation_habitat.launch
cyber/models/world/: README.md  __init__.py  worldmodel.py
cyber/models/world/autoencoder/: __init__.py
cyber/models/world/autoencoder/magvit2/: reconstruct.py
cyber/models/world/autoencoder/magvit2/models/: lfqgan.py
cyber/models/world/autoencoder/magvit2/modules/: __init__.py  ema.py  util.py
cyber/models/world/autoencoder/magvit2/modules/diffusionmodules/: improved_model.py
cyber/models/world/autoencoder/magvit2/modules/losses/: lpips.py  vqperceptual.py
cyber/models/world/autoencoder/magvit2/modules/scheduler/: lr_scheduler.py
cyber/models/world/autoencoder/magvit2/modules/vqvae/: lookup_free_quantize.py  quantize.py
cyber/models/world/dynamic/: __init__.py
cyber/models/world/dynamic/genie/: attention.py  config.py  eval_utils.py  evaluate.py  factorization_utils.py  st_mask_git.py  st_mask_git_action.py  st_transformer.py  utils.py  visualize.py
cyber/utils/: module.py  video.py
cybergpt/: ai_settings.yaml  main.py
cybergpt/agent/: agent_manager.py  ai_config.py  ai_functions.py  call_ai_function.py
cybergpt/interact/: browse.py  chat.py  commands.py  speak.py
cybergpt/memory/: __init__.py  base.py  local.py  pinecone.py  redismem.py
cybergpt/util/: config.py  image_gen.py  json_parser.py  llm_utils.py  logger.py
dataset/: download.sh  transform_cmu.py
doc/metaslam/: AutoDriver.md  AutoSLAM.md
docs/: api.md  index.md
docs/tutorial/: action.md  control.md  memory.md  world.md
experiments/: README.md
experiments/benchmarks/control/: README.md
experiments/configs/models/world/: MagVIT_Genie.yaml  world_model.yaml
experiments/models/world/: train.py
scripts/: build.sh  download_dataset.sh  kill_docker.sh  start_docker.sh  start_loam.sh
world/: train.py
world/dataloader/: __init__.py  base_dataloader.py  fusion_dataloader.py
world/dataset/: base_dataset.py  video_dataset.py
world/utils/: visualize.py
